--- a/quan_li_diem_sinh_vien/Properties/Settings.settings
+++ b/quan_li_diem_sinh_vien/Properties/Settings.settings
@@ -5,10 +5,10 @@
     <Setting Name="QLDSV_TCConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=DESKTOP-IO7NSFT\SERVER1;Initial Catalog=QLDSV_TC;Persist Security Info=True;User ID=sa&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=DESKTOP-BR976AR\MSSQLSERVER_1;Initial Catalog=QLDSV_TC;Persist Security Info=True;User ID=sa&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=DESKTOP-IO7NSFT\SERVER1;Initial Catalog=QLDSV_TC;Persist Security Info=True;User ID=sa</Value>
+      <Value Profile="(Default)">Data Source=DESKTOP-BR976AR\MSSQLSERVER_1;Initial Catalog=QLDSV_TC;Persist Security Info=True;User ID=sa</Value>
     </Setting>
   </Settings>
 </SettingsFile>
