--- a/quan_li_diem_sinh_vien/App.config
+++ b/quan_li_diem_sinh_vien/App.config
@@ -7,7 +7,7 @@
   </configSections>
   <connectionStrings>
     <add name="quan_li_diem_sinh_vien.Properties.Settings.QLDSV_TCConnectionString"
-      connectionString="Data Source=DESKTOP-IO7NSFT\SERVER1;Initial Catalog=QLDSV_TC;Persist Security Info=True;User ID=sa"
+      connectionString="Data Source=DESKTOP-IO7NSFT\SERVER1;Initial Catalog=QLDSV_TC;Persist Security Info=True;User ID=sa; Password=12345678"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <applicationSettings>
