--- a/quan_li_diem_sinh_vien/quan_li_diem_sinh_vien.csproj
+++ b/quan_li_diem_sinh_vien/quan_li_diem_sinh_vien.csproj
@@ -97,6 +97,14 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DSMLC.xsd</DependentUpon>
     </Compile>
+    <Compile Include="DSSVDKC.cs">
+      <DependentUpon>DSSVDKC.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="DSSVDKC.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DSSVDKC.xsd</DependentUpon>
+    </Compile>
     <Compile Include="FrmDangNhap.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -145,6 +153,12 @@
     <Compile Include="FrmNKHK.Designer.cs">
       <DependentUpon>FrmNKHK.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmSinhVienDki.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmSinhVienDki.Designer.cs">
+      <DependentUpon>FrmSinhVienDki.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FrmDangNhap.resx">
@@ -170,6 +184,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmNKHK.resx">
       <DependentUpon>FrmNKHK.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmSinhVienDki.resx">
+      <DependentUpon>FrmSinhVienDki.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -233,6 +250,17 @@
     </None>
     <None Include="DSMLC.xss">
       <DependentUpon>DSMLC.xsd</DependentUpon>
+    </None>
+    <None Include="DSSVDKC.xsc">
+      <DependentUpon>DSSVDKC.xsd</DependentUpon>
+    </None>
+    <None Include="DSSVDKC.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DSSVDKC.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="DSSVDKC.xss">
+      <DependentUpon>DSSVDKC.xsd</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
