--- a/quan_li_diem_sinh_vien/App.config
+++ b/quan_li_diem_sinh_vien/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System">
@@ -7,8 +7,9 @@
   </configSections>
   <connectionStrings>
     <add name="quan_li_diem_sinh_vien.Properties.Settings.QLDSV_TCConnectionString"
-      connectionString="Data Source=DESKTOP-BR976AR\MSSQLSERVER_1;Initial Catalog=QLDSV_TC;Persist Security Info=True;User ID=sa"
+      connectionString="Data Source=DESKTOP-IO7NSFT\SERVER1;Initial Catalog=QLDSV_TC;Persist Security Info=True;User ID=sa;Password=12345678"
       providerName="System.Data.SqlClient" />
+    <add name="QLDSV_TCConnectionString" connectionString="XpoProvider=MSSqlServer;data source=DESKTOP-IO7NSFT\SERVER1;user id=;password=;initial catalog=QLDSV_TC;Persist Security Info=true" />
   </connectionStrings>
   <applicationSettings>
     <DevExpress.LookAndFeel.Design.AppSettings>
