báo cáo Danh sách sinh viên đăng ký lớp tín chỉ

--- a/quan_li_diem_sinh_vien/App.config
+++ b/quan_li_diem_sinh_vien/App.config
@@ -9,7 +9,7 @@
     <add name="quan_li_diem_sinh_vien.Properties.Settings.QLDSV_TCConnectionString"
       connectionString="Data Source=DESKTOP-IO7NSFT\SERVER1;Initial Catalog=QLDSV_TC;Persist Security Info=True;User ID=sa;Password=12345678"
       providerName="System.Data.SqlClient" />
-    <add name="QLDSV_TCConnectionString" connectionString="XpoProvider=MSSqlServer;data source=DESKTOP-IO7NSFT\SERVER1;user id=;password=;initial catalog=QLDSV_TC;Persist Security Info=true" />
+    <add name="QLDSV_TCConnectionString" connectionString="XpoProvider=MSSqlServer;data source=DESKTOP-IO7NSFT\SERVER1;user id=sa;password=12345678;initial catalog=QLDSV_TC;Persist Security Info=true" />
   </connectionStrings>
   <applicationSettings>
     <DevExpress.LookAndFeel.Design.AppSettings>
