--- a/quan_li_diem_sinh_vien/quan_li_diem_sinh_vien.csproj
+++ b/quan_li_diem_sinh_vien/quan_li_diem_sinh_vien.csproj
@@ -187,6 +187,12 @@
     <Compile Include="FrmSinhVienDki.Designer.cs">
       <DependentUpon>FrmSinhVienDki.cs</DependentUpon>
     </Compile>
+    <Compile Include="Frm_BAOCAO_BANGDIEM.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_BAOCAO_BANGDIEM.Designer.cs">
+      <DependentUpon>Frm_BAOCAO_BANGDIEM.cs</DependentUpon>
+    </Compile>
     <Compile Include="Frm_BAOCAO_DSLTC.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -205,6 +211,12 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>DSSP.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Xrpt_BAOCAO_BANGDIEM.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Xrpt_BAOCAO_BANGDIEM.Designer.cs">
+      <DependentUpon>Xrpt_BAOCAO_BANGDIEM.cs</DependentUpon>
     </Compile>
     <Compile Include="Xrpt_BAOCAO_DSLTC.cs">
       <SubType>Component</SubType>
@@ -248,6 +260,9 @@
     <EmbeddedResource Include="FrmSinhVienDki.resx">
       <DependentUpon>FrmSinhVienDki.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Frm_BAOCAO_BANGDIEM.resx">
+      <DependentUpon>Frm_BAOCAO_BANGDIEM.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Frm_BAOCAO_DSLTC.resx">
       <DependentUpon>Frm_BAOCAO_DSLTC.cs</DependentUpon>
     </EmbeddedResource>
@@ -265,6 +280,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Xrpt_BAOCAO_BANGDIEM.resx">
+      <DependentUpon>Xrpt_BAOCAO_BANGDIEM.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Xrpt_BAOCAO_DSLTC.resx">
       <DependentUpon>Xrpt_BAOCAO_DSLTC.cs</DependentUpon>
     </EmbeddedResource>
