--- a/quan_li_diem_sinh_vien/quan_li_diem_sinh_vien.csproj
+++ b/quan_li_diem_sinh_vien/quan_li_diem_sinh_vien.csproj
@@ -211,6 +211,12 @@
     <Compile Include="Frm_BAOCAO_DSSV_DKLTC.Designer.cs">
       <DependentUpon>Frm_BAOCAO_DSSV_DKLTC.cs</DependentUpon>
     </Compile>
+    <Compile Include="Frm_BAOCAO_PHIEUDIEM.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_BAOCAO_PHIEUDIEM.Designer.cs">
+      <DependentUpon>Frm_BAOCAO_PHIEUDIEM.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DSSP.Designer.cs">
@@ -241,6 +247,12 @@
     </Compile>
     <Compile Include="Xrpt_BAOCAO_DSSV_DKLTC.Designer.cs">
       <DependentUpon>Xrpt_BAOCAO_DSSV_DKLTC.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Xrpt_BAOCAO_PHIEUDIEM.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Xrpt_BAOCAO_PHIEUDIEM.Designer.cs">
+      <DependentUpon>Xrpt_BAOCAO_PHIEUDIEM.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="FrmDangNhap.resx">
       <DependentUpon>FrmDangNhap.cs</DependentUpon>
@@ -284,6 +296,9 @@
     <EmbeddedResource Include="Frm_BAOCAO_DSSV_DKLTC.resx">
       <DependentUpon>Frm_BAOCAO_DSSV_DKLTC.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Frm_BAOCAO_PHIEUDIEM.resx">
+      <DependentUpon>Frm_BAOCAO_PHIEUDIEM.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -306,6 +321,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Xrpt_BAOCAO_DSSV_DKLTC.resx">
       <DependentUpon>Xrpt_BAOCAO_DSSV_DKLTC.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Xrpt_BAOCAO_PHIEUDIEM.resx">
+      <DependentUpon>Xrpt_BAOCAO_PHIEUDIEM.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="App.config" />
     <None Include="DS.xsc">
